--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project(gomoku)
 
 set(CMAKE_CXX_STANDARD 11)
 
-set(SOURCE_FILES source/main.cpp include/Protocol.hpp)
+set(SOURCE_FILES source/main.cpp include/Protocol.hpp include/Game.hpp source/Game.cpp)
 
 include_directories(include)
 add_executable(gomoku ${SOURCE_FILES})
