Zimmer on my pc

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,7 @@ set(CMAKE_CXX_COMPILER C:/MinGW/bin/g++.exe)
 
 project(gomoku)
 
-set(SOURCE_FILES source/main.cpp include/Protocol.hpp include/Game.hpp source/Game.cpp source/Protocol.cpp include/Brain.hpp source/Brain.cpp include/Application.hpp include/AI.hpp source/AI.cpp include/MyMultiset.hpp include/Info.h)
+set(SOURCE_FILES source/main.cpp include/Protocol.hpp include/Game.hpp source/Game.cpp source/Protocol.cpp include/Brain.hpp source/Brain.cpp include/Application.hpp include/AI.hpp source/AI.cpp include/MyMultiset.hpp include/Info.h source/Application.cpp)
 
 include_directories(include)
 add_executable(pbrain-GroMoCrew ${SOURCE_FILES})
